# eval-harness

./: README.md  pyproject.toml
.github/workflows/: ci.yml
fixtures/golden/: sample.json
src/eval_harness/: __init__.py  cli.py  metrics.py  report.py  runner.py
tests/: test_cli.py  test_metrics.py  test_runner.py
